RN3Pro: Fix autobrightness values

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -32,19 +32,13 @@
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
         <item>15</item>
-        <item>18</item>
-        <item>23</item>
-        <item>31</item>
-        <item>81</item>
-        <item>121</item>
-        <item>226</item>
-        <item>321</item>
-        <item>551</item>
-        <item>801</item>
-        <item>1251</item>
-        <item>2001</item>
-        <item>3001</item>
-        <item>5001</item>
+        <item>30</item>
+        <item>80</item>
+        <item>320</item>
+        <item>550</item>
+        <item>1000</item>
+        <item>1600</item>
+        <item>3000</item>
         <item>10000</item>
     </integer-array>
 
@@ -53,22 +47,16 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
+        <item>8</item>   <!-- 0-15 -->
+        <item>26</item>   <!-- 15-30 -->
+        <item>40</item>   <!-- 30-80 -->
+        <item>88</item>   <!-- 80-320 -->
+        <item>130</item>  <!-- 320-550 -->
+        <item>167</item>  <!-- 550-1000 -->
+        <item>204</item>  <!-- 1000-1600 -->
+        <item>240</item>  <!-- 1600-3000 -->
+        <item>254</item>  <!-- 3000-10000 -->
+        <item>255</item>  <!-- 10000+ -->
     </integer-array>
 
     <!-- Minimum screen brightness setting allowed by the power manager.
